--- a/bazel/cargo/remote/BUILD.once_cell-1.16.0.bazel
+++ b/bazel/cargo/remote/BUILD.once_cell-1.16.0.bazel
@@ -26,22 +26,32 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # Apache-2.0 from expression "Apache-2.0 OR MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "bench" with type "bench" omitted
+# Unsupported target "bench" with type "example" omitted
 
-# Unsupported target "insert_unique_unchecked" with type "bench" omitted
+# Unsupported target "bench_acquire" with type "example" omitted
+
+# Unsupported target "bench_vs_lazy_static" with type "example" omitted
+
+# Unsupported target "lazy_static" with type "example" omitted
+
+# Unsupported target "reentrant_init_deadlocks" with type "example" omitted
+
+# Unsupported target "regex" with type "example" omitted
+
+# Unsupported target "test_synchronization" with type "example" omitted
 
 rust_library(
-    name = "hashbrown",
+    name = "once_cell",
     srcs = glob(["**/*.rs"]),
     crate_features = [
-        "ahash",
-        "default",
-        "inline-more",
+        "alloc",
+        "race",
+        "unstable",
     ],
     crate_root = "src/lib.rs",
     data = [],
@@ -51,20 +61,13 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
-        "crate-name=hashbrown",
+        "crate-name=once_cell",
         "manual",
     ],
-    version = "0.12.0",
+    version = "1.16.0",
     # buildifier: leave-alone
     deps = [
-        "@raze__ahash__0_7_6//:ahash",
     ],
 )
 
-# Unsupported target "hasher" with type "test" omitted
-
-# Unsupported target "rayon" with type "test" omitted
-
-# Unsupported target "serde" with type "test" omitted
-
-# Unsupported target "set" with type "test" omitted
+# Unsupported target "it" with type "test" omitted
