--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -261,7 +261,7 @@ jobs:
       run: |
         docker run --rm \
           -v $(pwd)/envoy.yaml:/envoy.yaml \
-          -v $(pwd)/target/wasm32-wasi/debug:/etc/envoy/filters \
+          -v $(pwd)/target/wasm32-wasi/debug:/etc/envoy/proxy-wasm-plugins \
           envoyproxy/envoy:v1.24-latest \
           --mode validate \
           -c envoy.yaml
