--- a/examples/http_auth_random/Cargo.toml
+++ b/examples/http_auth_random/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 publish = false
-name = "proxy-wasm-http-auth-random"
+name = "proxy-wasm-example-http-auth-random"
 version = "0.0.1"
 authors = ["Piotr Sikora <piotrsikora@google.com>"]
-description = "Proxy-Wasm plugin example: HTTP authentication"
+description = "Proxy-Wasm plugin example: HTTP authentication (random)"
 license = "Apache-2.0"
 edition = "2018"
 
