review: update Envoy to v1.24.
Signed-off-by: Piotr Sikora <piotr@aviatrix.com>

--- a/examples/hello_world/envoy.yaml
+++ b/examples/hello_world/envoy.yaml
@@ -44,3 +44,5 @@ static_resources:
                             local:
                               filename: "/etc/envoy/filters/proxy_wasm_hello_world.wasm"
                 - name: envoy.filters.http.router
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
