--- a/examples/http_auth_random/envoy.yaml
+++ b/examples/http_auth_random/envoy.yaml
@@ -53,6 +53,8 @@ static_resources:
                             local:
                               filename: "/etc/envoy/filters/proxy_wasm_http_auth_random.wasm"
                 - name: envoy.filters.http.router
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
 
   clusters:
   - name: httpbin
