--- a/examples/http_body/envoy.yaml
+++ b/examples/http_body/envoy.yaml
@@ -61,3 +61,5 @@ static_resources:
                             local:
                               filename: "/etc/envoy/filters/proxy_wasm_http_body.wasm"
                 - name: envoy.filters.http.router
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
