--- a/examples/http_config/envoy.yaml
+++ b/examples/http_config/envoy.yaml
@@ -58,3 +58,5 @@ static_resources:
                             local:
                               filename: "/etc/envoy/filters/proxy_wasm_http_config.wasm"
                 - name: envoy.filters.http.router
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
