--- a/examples/http_headers/envoy.yaml
+++ b/examples/http_headers/envoy.yaml
@@ -55,3 +55,5 @@ static_resources:
                             local:
                               filename: "/etc/envoy/filters/proxy_wasm_http_headers.wasm"
                 - name: envoy.filters.http.router
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
