--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -88,6 +88,9 @@ jobs:
   stable:
     runs-on: ubuntu-latest
 
+    env:
+      RUSTFLAGS: -D warnings
+
     steps:
     - uses: actions/checkout@v2
 
@@ -98,23 +101,15 @@ jobs:
         rustup target add wasm32-wasi
 
     - name: Build (wasm32-unknown-unknown)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo build --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Clippy (wasm32-unknown-unknown)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Build (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo build --release --all-targets --target=wasm32-wasi
 
     - name: Clippy (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo clippy --release --all-targets --target=wasm32-wasi
 
     - name: Format (rustfmt)
@@ -132,6 +127,9 @@ jobs:
   nightly:
     runs-on: ubuntu-latest
 
+    env:
+      RUSTFLAGS: -D warnings
+
     steps:
     - uses: actions/checkout@v2
 
@@ -143,23 +141,15 @@ jobs:
         rustup default nightly
 
     - name: Build (wasm32-unknown-unknown)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo build --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Clippy (wasm32-unknown-unknown)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Build (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo build --release --all-targets --target=wasm32-wasi
 
     - name: Clippy (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo clippy --release --all-targets --target=wasm32-wasi
 
     - name: Format (rustfmt)
@@ -223,45 +213,54 @@ jobs:
 
   examples:
     runs-on: ubuntu-latest
-    env:
-      RUSTFLAGS: -D warnings -C link-args=-S
+
     strategy:
       matrix:
-        example: ['hello_world', 'http_auth_random', 'http_body', 'http_config', 'http_headers']
+        example:
+        - 'hello_world'
+        - 'http_auth_random'
+        - 'http_body'
+        - 'http_config'
+        - 'http_headers'
+
     defaults:
       run:
         working-directory: ./examples/${{ matrix.example }}
+
+    env:
+      RUSTFLAGS: -D warnings
+
     steps:
     - uses: actions/checkout@v2
+
     - name: Update Rust
       run: |
         rustup toolchain install stable --component clippy --component rustfmt
         rustup target add wasm32-wasi
 
-    - name: Format (rustfmt)
-      run: cargo fmt -- --check
-    - name: Format (manifest)
-      run: cargo verify-project
-    - name: Cargo outdated
-      run: cargo outdated --root-deps-only --exit-code 1
+    - name: Build (wasm32-wasi)
+      run: cargo build --release --target=wasm32-wasi
 
     - name: Clippy (wasm32-wasi)
-      run: cargo clippy --target=wasm32-wasi
-    - name: Build (wasm32-wasi)
-      run: cargo build --target=wasm32-wasi
+      run: cargo clippy --release --target=wasm32-wasi
 
-    - name: Cargo audit
-      if: matrix.example == 'hello_world'
-      run: cargo audit --ignore RUSTSEC-2020-0159
-    - name: Cargo audit
-      if: matrix.example != 'hello_world'
+    - name: Format (rustfmt)
+      run: cargo fmt -- --check
+
+    - name: Format (manifest)
+      run: cargo verify-project
+
+    - name: Run cargo audit
       run: cargo audit
+
+    - name: Run cargo outdated
+      run: cargo outdated --root-deps-only --exit-code 1
 
     - name: Validate Envoy config
       run: |
         docker run --rm \
           -v $(pwd)/envoy.yaml:/envoy.yaml \
-          -v $(pwd)/target/wasm32-wasi/debug:/etc/envoy/proxy-wasm-plugins \
+          -v $(pwd)/target/wasm32-wasi/release:/etc/envoy/proxy-wasm-plugins \
           envoyproxy/envoy:v1.24-latest \
           --mode validate \
           -c envoy.yaml
