--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -164,33 +164,6 @@ jobs:
     - name: Package (publish)
       run: cargo publish --dry-run --target=wasm32-unknown-unknown
 
-  reactor:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Update Rust
-      run: |
-        rustup toolchain install nightly --component clippy
-        rustup +nightly target add wasm32-wasi
-        rustup default nightly
-
-    - name: Rewrite Cargo.toml examples
-      run: |
-        grep -v '^crate-type' Cargo.toml > Cargo.tmp
-        mv Cargo.tmp Cargo.toml
-
-    - name: Build (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings -Z wasi-exec-model=reactor
-      run: cargo build --release --all-targets --target=wasm32-wasi
-
-    - name: Clippy (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings -Z wasi-exec-model=reactor
-      run: cargo clippy --release --all-targets --target=wasm32-wasi
-
   outdated:
     runs-on: ubuntu-latest
 
@@ -211,7 +184,7 @@ jobs:
         cp -p bazel/cargo/Cargo.raze.lock .
         cargo audit
 
-  examples:
+  example:
     runs-on: ubuntu-latest
 
     strategy:
@@ -237,6 +210,67 @@ jobs:
       run: |
         rustup toolchain install stable --component clippy --component rustfmt
         rustup target add wasm32-wasi
+
+    - name: Build (wasm32-wasi)
+      run: cargo build --release --target=wasm32-wasi
+
+    - name: Clippy (wasm32-wasi)
+      run: cargo clippy --release --target=wasm32-wasi
+
+    - name: Format (rustfmt)
+      run: cargo fmt -- --check
+
+    - name: Format (manifest)
+      run: cargo verify-project
+
+    - name: Run cargo audit
+      run: cargo audit
+
+    - name: Run cargo outdated
+      run: cargo outdated --root-deps-only --exit-code 1
+
+    - name: Validate Envoy config
+      run: |
+        docker run --rm \
+          -v $(pwd)/envoy.yaml:/envoy.yaml \
+          -v $(pwd)/target/wasm32-wasi/release:/etc/envoy/proxy-wasm-plugins \
+          envoyproxy/envoy:v1.24-latest \
+          --mode validate \
+          -c envoy.yaml
+
+  reactor:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        example:
+        - 'hello_world'
+        - 'http_auth_random'
+        - 'http_body'
+        - 'http_config'
+        - 'http_headers'
+
+    defaults:
+      run:
+        working-directory: ./examples/${{ matrix.example }}
+
+    env:
+      RUSTFLAGS: -D warnings -Z wasi-exec-model=reactor
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Update Rust
+      run: |
+        rustup toolchain install nightly --component clippy --component rustfmt
+        rustup +nightly target add wasm32-wasi
+        rustup default nightly
+
+    - name: Rewrite crate to reactor binary
+      run: |
+        grep -v '^\[lib\]' Cargo.toml > Cargo.tmp
+        grep -v '^crate-type' Cargo.tmp > Cargo.toml
+        mv src/lib.rs src/main.rs
 
     - name: Build (wasm32-wasi)
       run: cargo build --release --target=wasm32-wasi
