--- a/examples/hello_world/docker-compose.yaml
+++ b/examples/hello_world/docker-compose.yaml
@@ -19,8 +19,8 @@ services:
     ports:
       - "10000:10000"
     volumes:
-      - ./${EXAMPLE:-hello_world}/envoy.yaml:/etc/envoy/envoy.yaml
-      - ./${EXAMPLE:-hello_world}/target/wasm32-wasi/debug:/etc/envoy/filters
+      - ./envoy.yaml:/etc/envoy/envoy.yaml
+      - ./target/wasm32-wasi/release:/etc/envoy/proxy-wasm-plugins
     networks:
       - envoymesh
 
