--- a/examples/http_config/envoy.yaml
+++ b/examples/http_config/envoy.yaml
@@ -37,7 +37,7 @@ static_resources:
                         direct_response:
                           status: 200
                           body:
-                            inline_string: "Inspect the HTTP header: custom-header"
+                            inline_string: "Inspect the HTTP header: custom-header.\n"
               http_filters:
                 - name: envoy.filters.http.wasm
                   typed_config:
