--- a/examples/http_headers/envoy.yaml
+++ b/examples/http_headers/envoy.yaml
@@ -37,7 +37,7 @@ static_resources:
                         direct_response:
                           status: 200
                           body:
-                            inline_string: "Request /hello and be welcomed!"
+                            inline_string: "Request /hello and be welcomed!\n"
               http_filters:
                 - name: envoy.filters.http.wasm
                   typed_config:
