--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -77,7 +77,6 @@ jobs:
         export PATH=$PATH:$(go env GOPATH)/bin
         buildifier -mode=check WORKSPACE
         buildifier -mode=check BUILD
-        buildifier -mode=check examples/BUILD
 
     - name: Format (cargo raze)
       run: |
@@ -89,6 +88,9 @@ jobs:
   stable:
     runs-on: ubuntu-latest
 
+    env:
+      RUSTFLAGS: -D warnings
+
     steps:
     - uses: actions/checkout@v2
 
@@ -99,23 +101,15 @@ jobs:
         rustup target add wasm32-wasi
 
     - name: Build (wasm32-unknown-unknown)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo build --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Clippy (wasm32-unknown-unknown)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Build (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo build --release --all-targets --target=wasm32-wasi
 
     - name: Clippy (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo clippy --release --all-targets --target=wasm32-wasi
 
     - name: Format (rustfmt)
@@ -133,6 +127,9 @@ jobs:
   nightly:
     runs-on: ubuntu-latest
 
+    env:
+      RUSTFLAGS: -D warnings
+
     steps:
     - uses: actions/checkout@v2
 
@@ -144,23 +141,15 @@ jobs:
         rustup default nightly
 
     - name: Build (wasm32-unknown-unknown)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo build --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Clippy (wasm32-unknown-unknown)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
 
     - name: Build (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo build --release --all-targets --target=wasm32-wasi
 
     - name: Clippy (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings
       run: cargo clippy --release --all-targets --target=wasm32-wasi
 
     - name: Format (rustfmt)
@@ -174,33 +163,6 @@ jobs:
 
     - name: Package (publish)
       run: cargo publish --dry-run --target=wasm32-unknown-unknown
-
-  reactor:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Update Rust
-      run: |
-        rustup toolchain install nightly --component clippy
-        rustup +nightly target add wasm32-wasi
-        rustup default nightly
-
-    - name: Rewrite Cargo.toml examples
-      run: |
-        grep -v '^crate-type' Cargo.toml > Cargo.tmp
-        mv Cargo.tmp Cargo.toml
-
-    - name: Build (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings -Z wasi-exec-model=reactor
-      run: cargo build --release --all-targets --target=wasm32-wasi
-
-    - name: Clippy (wasm32-wasi)
-      env:
-        RUSTFLAGS: -D warnings -Z wasi-exec-model=reactor
-      run: cargo clippy --release --all-targets --target=wasm32-wasi
 
   outdated:
     runs-on: ubuntu-latest
@@ -220,4 +182,126 @@ jobs:
     - name: Run cargo audit
       run: |
         cp -p bazel/cargo/Cargo.raze.lock .
-        cargo audit --ignore RUSTSEC-2020-0159
+        cargo audit
+
+  example:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        example:
+        - 'hello_world'
+        - 'http_auth_random'
+        - 'http_body'
+        - 'http_config'
+        - 'http_headers'
+
+    defaults:
+      run:
+        working-directory: ./examples/${{ matrix.example }}
+
+    env:
+      RUSTFLAGS: -D warnings
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Update Rust
+      run: |
+        rustup toolchain install stable --component clippy --component rustfmt
+        rustup target add wasm32-wasi
+
+    - name: Build (wasm32-wasi)
+      run: cargo build --release --target=wasm32-wasi
+
+    - name: Clippy (wasm32-wasi)
+      run: cargo clippy --release --target=wasm32-wasi
+
+    - name: Format (rustfmt)
+      run: cargo fmt -- --check
+
+    - name: Format (manifest)
+      run: cargo verify-project
+
+    - name: Run cargo audit
+      run: cargo audit
+
+    - name: Run cargo outdated
+      run: cargo outdated --root-deps-only --exit-code 1
+
+    - name: Validate Envoy config
+      run: |
+        docker run --rm \
+          -v $(pwd)/envoy.yaml:/envoy.yaml \
+          -v $(pwd)/target/wasm32-wasi/release:/etc/envoy/proxy-wasm-plugins \
+          envoyproxy/envoy:v1.24-latest \
+          --mode validate \
+          -c envoy.yaml
+
+  reactor:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        example:
+        - 'hello_world'
+        - 'http_auth_random'
+        - 'http_body'
+        - 'http_config'
+        - 'http_headers'
+
+    defaults:
+      run:
+        working-directory: ./examples/${{ matrix.example }}
+
+    env:
+      RUSTFLAGS: -D warnings -Z wasi-exec-model=reactor
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Update Rust
+      run: |
+        rustup toolchain install nightly --component clippy --component rustfmt
+        rustup +nightly target add wasm32-wasi
+        rustup default nightly
+
+    - name: Change crate type from library to binary
+      run: |
+        grep -v '^\[lib\]' Cargo.toml > Cargo.tmp
+        grep -v '^crate-type' Cargo.tmp > Cargo.toml
+        mv src/lib.rs src/main.rs
+
+    - name: Build (wasm32-wasi)
+      run: cargo build --release --target=wasm32-wasi
+
+    - name: Clippy (wasm32-wasi)
+      run: cargo clippy --release --target=wasm32-wasi
+
+    - name: Format (rustfmt)
+      run: cargo fmt -- --check
+
+    - name: Format (manifest)
+      run: cargo verify-project
+
+    - name: Run cargo audit
+      run: cargo audit
+
+    - name: Run cargo outdated
+      run: cargo outdated --root-deps-only --exit-code 1
+
+    - name: Rename .wasm to match expected filename
+      run: |
+        cd target/wasm32-wasi/release
+        for file in $(ls -1 *.wasm); do \
+          mv $file $(echo $file | sed 's/-/_/g'); \
+        done
+
+    - name: Validate Envoy config
+      run: |
+        docker run --rm \
+          -v $(pwd)/envoy.yaml:/envoy.yaml \
+          -v $(pwd)/target/wasm32-wasi/release:/etc/envoy/proxy-wasm-plugins \
+          envoyproxy/envoy:v1.24-latest \
+          --mode validate \
+          -c envoy.yaml
