Update hashbrown to v0.14.
While there, fix instructions for regenerating Bazel rules.

Signed-off-by: Piotr Sikora <piotr@aviatrix.com>

--- a/bazel/cargo/remote/BUILD.allocator-api2-0.2.14.bazel
+++ b/bazel/cargo/remote/BUILD.allocator-api2-0.2.14.bazel
@@ -20,7 +20,7 @@ package(default_visibility = ["//visibility:public"])
 # ])
 
 rust_library(
-    name = "once_cell",
+    name = "allocator_api2",
     srcs = glob(
         include = [
             "**/*.rs",
@@ -47,15 +47,13 @@ rust_library(
     }),
     crate_features = [
         "alloc",
-        "race",
-        "unstable",
     ],
     crate_root = "src/lib.rs",
     data = select_with_or({
         "//conditions:default": [
         ],
     }),
-    edition = "2021",
+    edition = "2018",
     proc_macro_deps = [
     ] + select({
         "//conditions:default": [
@@ -80,7 +78,7 @@ rust_library(
         "noclippy",
         "norustfmt",
     ],
-    version = "1.16.0",
+    version = "0.2.14",
     deps = [
     ] + select({
         "//conditions:default": [
