Add metric related hostcalls to Context trait.
Also add an example filter demonstrating the use of metrics.

Signed-off-by: Caio Ramos Casimiro <caiorcasimiro@gmail.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -193,6 +193,7 @@ jobs:
         - 'http_body'
         - 'http_config'
         - 'http_headers'
+        - 'metrics'
 
     defaults:
       run:
@@ -247,6 +248,7 @@ jobs:
         - 'http_body'
         - 'http_config'
         - 'http_headers'
+        - 'metrics'
 
     defaults:
       run:
