Add example using gRPC callouts.
Signed-off-by: Piotr Sikora <piotr.sikora@frickle.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -238,6 +238,7 @@ jobs:
         - 'http_body'
         - 'http_config'
         - 'http_headers'
+        - 'grpc_auth_random'
 
     defaults:
       run:
@@ -301,6 +302,7 @@ jobs:
         - 'http_body'
         - 'http_config'
         - 'http_headers'
+        - 'grpc_auth_random'
 
     defaults:
       run:
