Allow executing GitHub Actions on non-x86_64 hosts.
Signed-off-by: Piotr Sikora <code@piotrsikora.dev>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -100,10 +100,10 @@ jobs:
     - name: Install dependencies
       if: ${{ env.ACT }}
       run: |
-        curl -OL https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init
-        chmod +x ./rustup-init
-        ./rustup-init -y
-        rm rustup-init
+        curl -OL https://static.rust-lang.org/rustup/rustup-init.sh
+        chmod +x ./rustup-init.sh
+        ./rustup-init.sh -y --default-toolchain stable
+        rm rustup-init.sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
     - name: Update Rust
@@ -148,10 +148,10 @@ jobs:
     - name: Install dependencies
       if: ${{ env.ACT }}
       run: |
-        curl -OL https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init
-        chmod +x ./rustup-init
-        ./rustup-init -y
-        rm rustup-init
+        curl -OL https://static.rust-lang.org/rustup/rustup-init.sh
+        chmod +x ./rustup-init.sh
+        ./rustup-init.sh -y --default-toolchain nightly
+        rm rustup-init.sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
     - name: Update Rust
@@ -194,10 +194,10 @@ jobs:
     - name: Install dependencies
       if: ${{ env.ACT }}
       run: |
-        curl -OL https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init
-        chmod +x ./rustup-init
-        ./rustup-init -y
-        rm rustup-init
+        curl -OL https://static.rust-lang.org/rustup/rustup-init.sh
+        chmod +x ./rustup-init.sh
+        ./rustup-init.sh -y
+        rm rustup-init.sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
         export PATH=$PATH:$HOME/.cargo/bin
         cargo install cargo-outdated
@@ -214,10 +214,10 @@ jobs:
     - name: Install dependencies
       if: ${{ env.ACT }}
       run: |
-        curl -OL https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init
-        chmod +x ./rustup-init
-        ./rustup-init -y
-        rm rustup-init
+        curl -OL https://static.rust-lang.org/rustup/rustup-init.sh
+        chmod +x ./rustup-init.sh
+        ./rustup-init.sh -y
+        rm rustup-init.sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
         export PATH=$PATH:$HOME/.cargo/bin
         cargo install cargo-audit
@@ -253,10 +253,10 @@ jobs:
     - name: Install dependencies
       if: ${{ env.ACT }}
       run: |
-        curl -OL https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init
-        chmod +x ./rustup-init
-        ./rustup-init -y
-        rm rustup-init
+        curl -OL https://static.rust-lang.org/rustup/rustup-init.sh
+        chmod +x ./rustup-init.sh
+        ./rustup-init.sh -y
+        rm rustup-init.sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
     - name: Update Rust
