--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ build = "build.rs"
 hashbrown = "0.14"
 log = "0.4"
 
+[dev-dependencies]
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
+
 [profile.release]
 lto = true
 opt-level = 3
