Add Promise support for http callout
ci add `http_parallel_call`

Signed-off-by: jizhuozhi.george <jizhuozhi.george@bytedance.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -287,6 +287,7 @@ jobs:
         - 'http_body'
         - 'http_config'
         - 'http_headers'
+        - 'http_parallel_call'
         - 'grpc_auth_random'
 
     defaults:
@@ -351,6 +352,7 @@ jobs:
         - 'http_body'
         - 'http_config'
         - 'http_headers'
+        - 'http_parallel_call'
         - 'grpc_auth_random'
 
     defaults:
