Use RFC-compliant HeaderValue type.
When "header-value" feature is enabled, a RFC-compliant HeaderValue
type is used instead of the previously used UTF-8 String type.

Since HTTP field values aren't UTF-8 encoded, using the String type
meant that a plugin would crash when valid, but obsolete, non-UTF-8
characters were present in HTTP headers and/or trailers.

This feature is currently optional to avoid breaking changes and to
help with migration, but it will become a default feature in v0.3.

The HeaderValue type is re-exported from the http crate.

Signed-off-by: Piotr Sikora <code@piotrsikora.dev>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -94,7 +94,9 @@ jobs:
 
     - name: Format (rules_rust)
       run: |
+        sed -i'' -E 's/^default = \[\]/default = \[\"header-value\"\]/' Cargo.toml
         bazelisk --noworkspace_rc run --noenable_bzlmod //bazel/cargo:crates_vendor
+        git checkout Cargo.toml
         git diff --exit-code
 
   msrv:
@@ -147,6 +149,12 @@ jobs:
 
     - name: Clippy (wasm32-wasi)
       run: cargo clippy --release --all-targets --target=wasm32-wasi
+
+    - name: Build (header-value)
+      run: cargo build --release --all-targets --target=wasm32-wasi --features header-value
+
+    - name: Clippy (header-value)
+      run: cargo clippy --release --all-targets --target=wasm32-wasi --features header-value
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -210,6 +218,12 @@ jobs:
     - name: Clippy (wasm32-wasip1)
       run: cargo clippy --release --all-targets --target=wasm32-wasip1
 
+    - name: Build (header-value)
+      run: cargo build --release --all-targets --target=wasm32-wasip1 --features header-value
+
+    - name: Clippy (header-value)
+      run: cargo clippy --release --all-targets --target=wasm32-wasip1 --features header-value
+
     - name: Format (rustfmt)
       run: cargo fmt -- --check
 
@@ -272,6 +286,12 @@ jobs:
 
     - name: Clippy (wasm32-wasip1)
       run: cargo clippy --release --all-targets --target=wasm32-wasip1
+
+    - name: Build (header-value)
+      run: cargo build --release --all-targets --target=wasm32-wasip1 --features header-value
+
+    - name: Clippy (header-value)
+      run: cargo clippy --release --all-targets --target=wasm32-wasip1 --features header-value
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
