--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,12 @@ build = "build.rs"
 
 [dependencies]
 hashbrown = "0.15"
+http = { version = "1", optional = true }
 log = "0.4"
+
+[features]
+default = []
+header-value = ["dep:http"]
 
 [profile.release]
 lto = true
