--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -111,7 +111,7 @@ jobs:
         rustup toolchain install 1.64.0 --component clippy --component rustfmt
         rustup default 1.64.0
         rustup target add wasm32-unknown-unknown
-        rustup target add wasm32-wasip1
+        rustup target add wasm32-wasi
 
     - name: Build (wasm32-unknown-unknown)
       run: cargo build --release --all-targets --target=wasm32-unknown-unknown
@@ -119,11 +119,11 @@ jobs:
     - name: Clippy (wasm32-unknown-unknown)
       run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
 
-    - name: Build (wasm32-wasip1)
-      run: cargo build --release --all-targets --target=wasm32-wasip1
+    - name: Build (wasm32-wasi)
+      run: cargo build --release --all-targets --target=wasm32-wasi
 
-    - name: Clippy (wasm32-wasip1)
-      run: cargo clippy --release --all-targets --target=wasm32-wasip1
+    - name: Clippy (wasm32-wasi)
+      run: cargo clippy --release --all-targets --target=wasm32-wasi
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
