Cache all GitHub Actions when running locally.
While there, remove unnecessary paths from cache for Bazel job.

Signed-off-by: Piotr Sikora <code@piotrsikora.dev>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,6 +38,14 @@ jobs:
       with:
         go-version: '^1.16'
 
+    - name: Cache
+      if: ${{ env.ACT }}
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/go/pkg/mod
+        key: licenses-${{ hashFiles('.github/workflows/rust.yml') }}
+
     - name: Check licenses
       run: |
         go install github.com/google/addlicense@latest
@@ -53,22 +61,19 @@ jobs:
       with:
         go-version: '^1.16'
 
-    - name: Install dependencies
-      if: ${{ env.ACT }}
-      run: |
-        go install github.com/bazelbuild/bazelisk@v1.19.0
-
     - name: Cache
       uses: actions/cache@v2
       with:
         path: |
           ~/.cache/bazel
           ~/.cache/bazelisk
-          ~/.cargo/.crates.toml
-          ~/.cargo/.crates2.json
-          ~/.cargo/bin
-          ~/.cargo/registry
-        key: ${{ hashFiles('WORKSPACE', '.bazelrc', '.bazelversion', 'bazel/cargo/Cargo.Bazel.lock', 'bazel/dependencies.bzl', 'bazel/repositories.bzl') }}
+          ~/go/pkg/mod
+        key: bazel-${{ hashFiles('WORKSPACE', '.bazelrc', '.bazelversion', 'bazel/cargo/Cargo.Bazel.lock', 'bazel/dependencies.bzl', 'bazel/repositories.bzl') }}
+
+    - name: Install dependencies
+      if: ${{ env.ACT }}
+      run: |
+        go install github.com/bazelbuild/bazelisk@v1.19.0
 
     - name: Build (wasm32-unknown-unknown)
       run: bazelisk --noworkspace_rc build --noenable_bzlmod --platforms=@rules_rust//rust/platform:wasm //...
@@ -96,6 +101,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Cache
+      if: ${{ env.ACT }}
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/.crates.toml
+          ~/.cargo/.crates2.json
+          ~/.cargo/bin
+          ~/.cargo/registry
+          ~/.rustup
+          **/target
+        key: msrv-${{ hashFiles('.github/workflows/rust.yml', 'Cargo.toml') }}
 
     - name: Install dependencies
       if: ${{ env.ACT }}
@@ -146,6 +164,19 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Cache
+      if: ${{ env.ACT }}
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/.crates.toml
+          ~/.cargo/.crates2.json
+          ~/.cargo/bin
+          ~/.cargo/registry
+          ~/.rustup
+          **/target
+        key: stable-${{ hashFiles('.github/workflows/rust.yml', 'Cargo.toml') }}
+
     - name: Install dependencies
       if: ${{ env.ACT }}
       run: |
@@ -194,6 +225,19 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Cache
+      if: ${{ env.ACT }}
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/.crates.toml
+          ~/.cargo/.crates2.json
+          ~/.cargo/bin
+          ~/.cargo/registry
+          ~/.rustup
+          **/target
+        key: nightly-${{ hashFiles('.github/workflows/rust.yml', 'Cargo.toml') }}
+
     - name: Install dependencies
       if: ${{ env.ACT }}
       run: |
@@ -240,6 +284,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Cache
+      if: ${{ env.ACT }}
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/.crates.toml
+          ~/.cargo/.crates2.json
+          ~/.cargo/bin
+          ~/.cargo/registry
+          ~/.rustup
+        key: outdated-${{ hashFiles('.github/workflows/rust.yml', 'Cargo.toml') }}
+
     - name: Install dependencies
       if: ${{ env.ACT }}
       run: |
@@ -259,6 +315,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Cache
+      if: ${{ env.ACT }}
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/.crates.toml
+          ~/.cargo/.crates2.json
+          ~/.cargo/bin
+          ~/.cargo/registry
+          ~/.rustup
+        key: audit-${{ hashFiles('.github/workflows/rust.yml', 'Cargo.toml') }}
 
     - name: Install dependencies
       if: ${{ env.ACT }}
@@ -298,6 +366,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Cache
+      if: ${{ env.ACT }}
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/.crates.toml
+          ~/.cargo/.crates2.json
+          ~/.cargo/bin
+          ~/.cargo/registry
+          ~/.rustup
+          **/target
+        key: example-${{ matrix.example }}-${{ hashFiles('.github/workflows/rust.yml', 'Cargo.toml') }}
 
     - name: Install dependencies
       if: ${{ env.ACT }}
@@ -362,6 +443,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Cache
+      if: ${{ env.ACT }}
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/.crates.toml
+          ~/.cargo/.crates2.json
+          ~/.cargo/bin
+          ~/.cargo/registry
+          ~/.rustup
+          **/target
+        key: reactor-${{ matrix.example }}-${{ hashFiles('.github/workflows/rust.yml', 'Cargo.toml') }}
 
     - name: Install dependencies
       if: ${{ env.ACT }}
