--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -276,7 +276,7 @@ jobs:
         cp -p bazel/cargo/Cargo.Bazel.lock Cargo.lock
         cargo audit
 
-  example:
+  examples:
     runs-on: ubuntu-latest
 
     strategy:
@@ -340,7 +340,7 @@ jobs:
           --mode validate \
           -c envoy.yaml
 
-  reactor:
+  reactors:
     runs-on: ubuntu-latest
 
     strategy:
@@ -368,7 +368,7 @@ jobs:
       run: |
         curl -OL https://static.rust-lang.org/rustup/rustup-init.sh
         chmod +x ./rustup-init.sh
-        ./rustup-init.sh -y
+        ./rustup-init.sh -y --default-toolchain nightly
         rm rustup-init.sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
