Skip audit and outdated checks for examples when testing locally.
Building those tools takes significant amount of time and resources,
and it doesn't provide much value for examples.

Signed-off-by: Piotr Sikora <code@piotrsikora.dev>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -326,9 +326,11 @@ jobs:
       run: cargo verify-project
 
     - name: Run cargo audit
+      if: ${{ !env.ACT }}
       run: cargo audit
 
     - name: Run cargo outdated
+      if: ${{ !env.ACT }}
       run: cargo outdated --root-deps-only --exit-code 1
 
     - name: Validate Envoy config
@@ -397,9 +399,11 @@ jobs:
       run: cargo verify-project
 
     - name: Run cargo audit
+      if: ${{ !env.ACT }}
       run: cargo audit
 
     - name: Run cargo outdated
+      if: ${{ !env.ACT }}
       run: cargo outdated --root-deps-only --exit-code 1
 
     - name: Rename .wasm to match expected filename
