--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -395,11 +395,13 @@ jobs:
     - name: Format (manifest)
       run: cargo verify-project
 
-    - name: Run cargo audit
-      run: cargo audit
+    # TODO: Re-enable once cargo audit supports Cargo lockfile v4.
+    #- name: Run cargo audit
+    #  run: cargo audit
 
-    - name: Run cargo outdated
-      run: cargo outdated --root-deps-only --exit-code 1
+    # TODO: Re-enable once cargo outdated supports Cargo lockfile v4.
+    #- name: Run cargo outdated
+    #  run: cargo outdated --root-deps-only --exit-code 1
 
     - name: Rename .wasm to match expected filename
       run: |
