Skip audit and outdated checks in examples when testing locally. (#280)
Building those tools takes significant amount of time and resources,
and it doesn't provide too much value in examples.

Signed-off-by: Piotr Sikora <code@piotrsikora.dev>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -325,9 +325,11 @@ jobs:
       run: cargo verify-project
 
     - name: Run cargo audit
+      if: ${{ !env.ACT }}
       run: cargo audit
 
     - name: Run cargo outdated
+      if: ${{ !env.ACT }}
       run: cargo outdated --root-deps-only --exit-code 1
 
     - name: Validate Envoy config
@@ -397,10 +399,12 @@ jobs:
 
     # TODO: Re-enable once cargo audit supports Cargo lockfile v4.
     #- name: Run cargo audit
+    #  if: ${{ !env.ACT }}
     #  run: cargo audit
 
     # TODO: Re-enable once cargo outdated supports Cargo lockfile v4.
     #- name: Run cargo outdated
+    #  if: ${{ !env.ACT }}
     #  run: cargo outdated --root-deps-only --exit-code 1
 
     - name: Rename .wasm to match expected filename
